[tool.poetry]
name = "gitrepoupdatebot"
version = "0.1.0"
description = "bot to notify about update to a repo"
authors = ["ilyafefelov <ilyafefelov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.3"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
requests = "^2.32.0"
httpx = "^0.27.0"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
